Plotting of vectors

--- a/web/index.html
+++ b/web/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ECG Visualization</title>
+    <title>ECG</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <header>
-        <h1>ECG Visualization</h1>
+        <h1>ECG</h1>
     </header>
     <main>
-        <section id="heart-animation">
-            <div id="heart-container">
-                <img id="heart-image" width="80%" height="auto" src="./assets/svgs/heart.svg" />
+        <section id="heart">
+            <div class="heart-container">
+                <img class="heart-image" src="./assets/svgs/heart.svg" />
                 <canvas id="heartCanvas"></canvas>
             </div>
         </section>
