--- a/web/index.html
+++ b/web/index.html
@@ -1,30 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ECG</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
+
 <body>
-    <header>
-        <h1>ECG</h1>
+    <div class="dotted-background"></div>
+    <div class="overlay-background"></div>
+    <div id="smokeBackground" class="nav-smoke-background"></div>
+    <header id="header" class="page-header">
+        <button class="hamburger" id="hamburgerMenu">
+            <div></div>
+            <div></div>
+            <div></div>
+        </button>
+        <!-- <img src="https://avatars.githubusercontent.com/ShankarBUS" alt="ShankarBUS" class="avatar"> -->
+        <label>ECG</label>
+        <!-- <nav id="navBar" class="navbar">
+            <ul id="navList" class="navlist">
+                <li><a href="#basic-info">Basic Info</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#achievements">Achievements</a></li>
+                <li><a href="#socials">Socials</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#github-stats">GitHub Stats</a></li>
+                <li><a href="#renders">Renders</a></li>
+            </ul>
+        </nav> -->
     </header>
-    <main>
-        <group id="heart">
-            <div class="heart-container">
-                <img class="heart-image" src="./assets/svgs/heart.svg" />
-                <canvas id="heartCanvas"></canvas>
+    <div id="main">
+        <div class="column">
+            <div class="group">
+                <h2>Heart</h2>
+                <div class="sub-group ecg-group">
+                    <div class="ecg-container">
+                        <canvas id="ecgWaveCanvas" class="ecg-canvas canvas"></canvas>
+                        <div id="ecgPointer" class="ecg-pointer"></div>
+                        <input type="range" id="ecgSlider" class="ecg-slider" min="0" max="100" value="0" step="1" />
+                    </div>
+                    <div class="heart-container">
+                        <img id="heartImage" class="heart-image" src="./assets/svgs/heart.svg" />
+                        <canvas id="heartCanvas" class="heart-canvas canvas"></canvas>
+                    </div>
+                </div>
             </div>
-        </group>
-        <group id="ecg-slider">
-            <div id="ecgWaveformDisplay">
-                <canvas id="ecgWaveCanvas"></canvas>
-                <div id="ecgPointer"></div>
-                <input type="range" id="ecgSlider" class="ecg-slider" min="0" max="100" value="0" step="1" />
-            </div>
-        </group>
-    </main>
+        </div>
+    </div>
     <script src="assets/js/script.js" type="module"></script>
 </body>
+
 </html>
