--- a/web/index.html
+++ b/web/index.html
@@ -35,7 +35,7 @@
                     <div class="slider-container">
                         <canvas id="ecgWaveCanvas" class="ecg-canvas canvas"></canvas>
                         <div id="ecgPointer" class="ecg-pointer"></div>
-                        <input type="range" id="ecgSlider" class="ecg-slider" min="0" max="100" value="0" step="1" />
+                        <input type="range" id="ecgSlider" class="ecg-slider" />
                     </div>
                     <div class="heart-container">
                         <img id="heartImage" class="heart-image" src="./assets/svgs/heart.svg" />
