--- a/web/index.html
+++ b/web/index.html
@@ -30,16 +30,21 @@
         <div class="column">
             <div class="group">
                 <h2 id="heart-visual">Heart Visual</h2>
-                <div class="sub-group heart-group">
+                <div class="sub-group">
                     <p>Drag the ECG Slider.</p>
-                    <div class="slider-container">
-                        <canvas id="ecgWaveCanvas" class="ecg-canvas canvas"></canvas>
-                        <div id="ecgPointer" class="ecg-pointer"></div>
-                        <input type="range" id="ecgSlider" class="ecg-slider" />
-                    </div>
-                    <div class="heart-container">
-                        <img id="heartImage" class="heart-image" src="./assets/svgs/heart.svg" />
-                        <canvas id="heartCanvas" class="heart-canvas canvas"></canvas>
+                    <div class="controller-container">
+                        <div class="slider-container">
+                            <canvas id="ecgWaveCanvas" class="ecg-canvas canvas"></canvas>
+                            <div id="ecgPointer" class="ecg-pointer"></div>
+                            <input type="range" id="ecgSlider" class="ecg-slider" />
+                        </div>
+                        <div class="heart-container">
+                            <img id="heartImage" class="heart-image" src="./assets/svgs/heart.svg" />
+                            <canvas id="heartCanvas" class="heart-canvas canvas"></canvas>
+                            <div id="electrodesContainer" class="electrodes-container"></div>
+                            <div id="heartPointer" class="heart-pointer"></div>
+                        </div>
+                        <div id="leadDetailsContainer"></div>
                     </div>
                 </div>
             </div>
