Loading Heart Conditions

--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,8 @@
             <div class="group">
                 <h2 id="heart-visual">Heart Visual</h2>
                 <div class="sub-group">
+                    <label for="conditionCMB">Select Condition</label>
+                    <combo-box id="conditionCMB"></combo-box>
                     <p>Drag the ECG Slider.</p>
                     <div class="controller-container">
                         <div class="slider-container">
@@ -58,7 +60,8 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/script.js" type="module"></script>
+    <script type="module" src="https://shankarbus.github.io/kaadu-ui/combo-box.js"></script>
+    <script type="module" src="assets/js/script.js"></script>
 </body>
 
 </html>
