--- a/web/index.html
+++ b/web/index.html
@@ -44,7 +44,7 @@
                             <img id="heartImage" class="heart-image" src="./assets/svgs/heart.svg" />
                             <canvas id="heartCanvas" class="heart-canvas canvas"></canvas>
                             <div id="electrodesContainer" class="electrodes-container"></div>
-                            <div id="heartPointer" class="heart-pointer"></div>
+                            <!-- <div id="heartPointer" class="heart-pointer"></div> -->
                         </div>
                         <div id="leadDetailsContainer"></div>
                     </div>
